src/css/main.css
@import 'news/news.css';
@import 'projects/projects.css';

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

html body {
  font-family: Helvetica;
  background: #F2F2F2;
  font-size: 1.3em;
  overflow: hidden;
}

a,
a:focus,
a:hover {
  color: #235A9F;
  outline: none;
  text-decoration: none;
}

#wrap {
  min-height: 100%;
  height: 100%;
  margin: auto;
  overflow: auto;
  position: relative;
}

#topnav {
  height: 50px;
}

.navbar {
  z-index: 1; /* Overlap the main content */
}

.navbar,
.navbar-nav > li > a:visited {
  background-color: #883080;
  border-color: #883080;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.navbar-nav > .active {
  background-color: #995099;
  border-color: #883080;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.navbar-nav > .active > a,
.navbar-nav > .active > a:visited {
  background-color: #995099;
  border-color: #883080;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.navbar-nav > li > a:active {
  background-color: #995099;
  border-color: #883080;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.navbar-header > a {
  color: #E0D050;
}

.navbar-header > button.navbar-toggle > span.icon-bar {
  background-color: #E0D050;
}

.navbar-header > a:hover {
  color: #FFEE66;
}

.navbar-nav > li > a {
  color: #DDDD55;
}

.navbar-nav > li > a:hover {
  background-color: #995099;
}

.scrollwrap {
  position: absolute;
  z-index: 0;
  top: 52px;
  bottom: 40px;
  width: 100%;
  overflow: auto;
}

.content {
  padding-left: 10%;
  padding-right: 10%;
  margin-bottom: 40px; /* Don't overlap the footer */
  overflow: visible;
}

#footer {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 40px;
  background-color: #553355;
  padding: 10px;
  padding-left: 5px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

#footer .text-muted {
  color: #EEEEEE;
}

.btn-primary {
  background-color: #772070;
  color: #EEEEEE;
  border-color: #661060;
}

.btn-primary:hover {
  background-color: #662060;
  color: #FFFFFF;
  border-color: #551050;
}

label {
  display: block;
  padding-left: 15px;
  text-indent: -15px;
  padding-bottom: 15px;
}

input {
  width: 13px;
  height: 13px;
  padding: 0;
  margin: 0;
  vertical-align: bottom;
  position: relative;
  top: -3px;
  *overflow: hidden;
}

.admin-actions {
  background: #EEEEEE;
  border-radius: 4px;
  box-shadow: 0 1px 1px #999999;
  padding: 1em;
  margin: 1em auto;
}

